github repo link

--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@
   text-align: center;
   display: block;
 }
-.bold {
-  font-weight: bold;
+.f16 {
+  font-size: 16px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 body {
     background-color: #181a1b;
@@ -17,6 +19,7 @@ body {
 }
 a {
   color: #3391ff;
+  font-weight: bold;
   text-decoration: none;
   vertical-align: middle;
 }
