--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 .center {
-  margin: 30%;
+  margin: 100px;
   margin-top: 8%;
   margin-bottom: 10%;
   padding: 10px;
-  width: 40%;
+  width: auto;
   text-align: center;
   display: block;
 }
+.f20 {
+  font-weight: bold;
+  font-size: 20px;
+}
 .f16 {
   font-size: 16px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 body {
     background-color: #181a1b;
@@ -21,7 +25,6 @@ a {
   color: #3391ff;
   font-weight: bold;
   text-decoration: none;
-  vertical-align: middle;
 }
 h1 {
   font-size: 44px;
