--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
   font-family: Poppins;
   font-weight: normal;
   src: url(/fonts/Poppins-Light.ttf);
+  font-display: swap;
 }
 @font-face {
   font-family: Poppins;
   font-weight: bold;
   src: url(/fonts/Poppins-SemiBold.ttf);
+  font-display: swap;
 }
 
 .center {
