--- a/style.css
+++ b/style.css
@@ -11,28 +11,43 @@
   font-display: swap;
 }
 
-.center {
-  margin: 10%;
-  margin-top: 0.5%;
-  margin-bottom: 10%;
-  padding: 10px;
+.banner {
   width: auto;
+  height: 100vh;
+  vertical-align: middle;
+}
+.center {
+  padding: 5%;
+  padding-top: 3%;
+  height: 80%;
+  width: 90%;
   text-align: center;
-  display: block;
+  display: inline-block;
 }
 .logo {
     position: relative;
     top: 0;
     left: 0;
-    margin: 30px;
-    margin-bottom: 10px;
+}
+.icon {
+  height: auto;
+  width: 3vh;
+}
+.arrowDiv {
+  margin: 10vh;
+}
+.arrow {
+  opacity: 0.7;
+}
+.arrow:hover {
+  opacity: 1;
 }
 .f20 {
   font-weight: bold;
-  font-size: 20px;
+  font-size: 2.7vh;
 }
 .f16 {
-  font-size: 16px;
+  font-size: 2.1vh;
   margin-left: 3%;
   margin-right: 3%;
 }
@@ -47,13 +62,14 @@ a {
   text-decoration: none;
 }
 h1 {
-  font-size: 44px;
+  margin-top: 0;
+  font-size: 6vh;
 }
 h2 {
-  font-size: 32px;
+  font-size: 4.4vh;
 }
 p {
-  font-size: 24px;
+  font-size: 3.3vh;
 }
 img {
   vertical-align: middle;
