--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@
   font-display: swap;
 }
 
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+#content-wrap {
+  padding-bottom: 9rem;
+}
 .banner {
   width: auto;
   height: 100vh;
@@ -75,4 +82,9 @@ li {
   margin-bottom: 15px;
   background-color: #1D8195;
   border-radius: 20px;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
