--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: Poppins;
   font-weight: normal;
-  src: url(/fonts/Poppins-Light.ttf);
+  src: url(/assets/fonts/Poppins-Light.ttf);
   font-display: swap;
 }
 @font-face {
   font-family: Poppins;
   font-weight: bold;
-  src: url(/fonts/Poppins-SemiBold.ttf);
+  src: url(/assets/fonts/Poppins-SemiBold.ttf);
   font-display: swap;
 }
 
