--- a/_includes/script_faq.html
+++ b/_includes/script_faq.html
@@ -7,7 +7,7 @@
         "@type": "ListItem",
         "position": 1,
         "name": "faq",
-        "item": "https://bewu.ga/faq/"
+        "item": "https://bewu.ga/faq"
       }]
     }
   </script>
