--- a/_includes/script_index.html
+++ b/_includes/script_index.html
@@ -5,8 +5,8 @@
     "@type": "Organization",
     "name": "bewu",
     "legalName" : "bewuwy",
-    "url": "https://bewu.ga",
-    "@id": "https://bewu.ga",
+    "url": "https://bewu.ga/",
+    "@id": "https://bewu.ga/",
     "logo": "https://bewu.ga/assets/images/logo/bewu.png",
     "foundingDate": "2021",
     "founders": [
