--- a/_includes/script_projects.html
+++ b/_includes/script_projects.html
@@ -6,7 +6,7 @@
       "@type": "ListItem",
       "position": 1,
       "name": "projects",
-      "item": "https://bewu.ga/projects/"
+      "item": "https://bewu.ga/projects"
     }]
   }
 </script>
