keywords added fixed sitemap.txt

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
 
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ page.description }}" />
+    <meta name="keywords" content="bewu, bewuwy, bewu69, bartek, włodarczyk" />
+    <meta name="author" content="Bartek Włodarczyk" />
+
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:description" content="{{ page.description }}" />
     <meta property="og:site_name" content="bewu.ga" />
