--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer" style="background-color: #0c0d0e;">
-  <div class="center" style="padding-bottom: 0; padding-top: 0;">
+  <div class="center" style="margin-top: 0; margin-bottom: 0; padding-bottom: 0; padding-top: 0;">
     <p class="f16"><a href="/faq" rel="next" alt="FAQ">faq</a></p>
     <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
     <p class="f16">©2021 Bartek Włodarczyk</p>
