--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,3 +1,7 @@
-<a alt="bewu.ga" href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
-  <img src="/assets/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
-</a>
+<nav>
+  <a alt="bewu.ga" href="/" rel="prev" style="margin: 2vw; margin-right: 0.5vw;">
+    <img src="/assets/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto; vertical-align: bottom;">
+  </a>
+  <a href="/faq" rel="next">faq</a>
+  <a href="/projects" rel="next">projects</a>
+</nav>
