--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,21 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="sitemap" href="/sitemap.xml" />
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     {% if page.head_include %}
       {% include {{ page.head_include }} %}
     {% endif %}
+
+    <style type="text/css">
+      .hidden {opacity: 0;}
+    </style>
+    <script type="text/javascript">
+      $('html').addClass('hidden');
+      $(document).ready(function() {
+        $('html').removeClass('hidden');
+       });
+   </script>
   </head>
   <body>
     <div id="page-container">
