--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
   min-height: 100vh;
 }
 #content-wrap {
-  padding-bottom: 9rem;
+  padding-bottom: 10rem;
 }
 .banner {
   width: auto;
@@ -67,6 +67,18 @@
   margin-left: 3%;
   margin-right: 3%;
 }
+nav {
+    padding-top: 2vw;
+    vertical-align: middle;
+    line-height: 3.7vh;
+}
+nav a {
+    margin: 1vw;
+    color: white;
+    font-size: 3.5vh;
+    font-weight: bold;
+    vertical-align: 2%;
+}
 body {
     background-color: #131516;
     color: white;
@@ -101,4 +113,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+footer p {
+  margin: 0.7em;
 }
