converted images to webp removed unstyled flash "fix" downloaded jquery added arrow to includes

--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,6 +1,6 @@
 <nav>
   <a alt="bewu.ga" href="/" rel="prev" style="margin: 2vw; margin-right: 0.5vw;">
-    <img src="/assets/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto; vertical-align: bottom;">
+    <img src="/assets/logo/bewu_long.webp" alt="bewu.ga" style="vertical-align: bottom; height: 6vh; width: auto;" width= "1200" height="480">
   </a>
   <a href="/faq" rel="next">faq</a>
   <a href="/projects" rel="next">projects</a>
