--- a/_includes/script_index.html
+++ b/_includes/script_index.html
@@ -6,7 +6,7 @@
     "legalName" : "bewuwy",
     "url": "https://bewu.ga/",
     "@id": "https://bewu.ga/",
-    "logo": "https://bewu.ga/assets/images/logo/bewu.png",
+    "logo": "https://bewu.ga/assets/images/logo/bewu.webp",
     "foundingDate": "2021",
     "founders": [
       {
