--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,31 +14,23 @@
     <meta property="og:description" content="{{ page.description }}" />
     <meta property="og:site_name" content="bewu.ga" />
     <meta property="og:url" content="{{ site.url }}" />
-    <meta property="og:image" content="https://bewu.ga/assets/logo/bewu_long.png" />
+    <meta property="og:image" content="https://bewu.ga/assets/logo/bewu_long.webp" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="600" />
     <meta property="og:image:alt" content="bewu" />
     <meta property="og:type" content="website" />
 
+    <link rel="preload" href="/assets/css/style.css" as="style" />
+
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="sitemap" href="/sitemap.xml" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/assets/js/jquery-3.6.0.min.js" async></script>
 
     {% if page.head_include %}
       {% include {{ page.head_include }} %}
     {% endif %}
-
-    <style type="text/css">
-      .hidden {opacity: 0;}
-    </style>
-    <script type="text/javascript">
-      $('html').addClass('hidden');
-      $(document).ready(function() {
-        $('html').removeClass('hidden');
-       });
-   </script>
   </head>
   <body>
     <div id="page-container">
