--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,6 @@
 <nav>
-  <a alt="bewu.ga" href="/" rel="prev" style="margin: 2vw; margin-right: 0.5vw;">
-    <img src="/assets/logo/bewu_long.webp" alt="bewu.ga" style="vertical-align: bottom; height: 6vh; width: auto;" width= "1200" height="480">
+  <a alt="bewu.ga" href="/" rel="prev" style="margin: 2vw; margin-right: 0;">
+    <img src="/assets/logo/bewu_long.webp" alt="bewu.dev" style="vertical-align: bottom; height: 6vh; width: auto;" width= "1200" height="480">
   </a>
-  <a href="/faq" rel="next">faq</a>
-  <a href="/projects" rel="next">projects</a>
+  <a href="/projects" rel="next" style="margin-left: 0;">projects</a>
 </nav>
