fixed domain name

--- a/_includes/script_index.html
+++ b/_includes/script_index.html
@@ -4,9 +4,9 @@
     "@type": "Organization",
     "name": "bewu",
     "legalName" : "bewuwy",
-    "url": "https://bewu.ga/",
-    "@id": "https://bewu.ga/",
-    "logo": "https://bewu.ga/assets/images/logo/bewu.webp",
+    "url": "https://bewu.dev/",
+    "@id": "https://bewu.dev/",
+    "logo": "https://bewu.ga/assets/pfp/pfp-neon.webp",
     "foundingDate": "2021",
     "founders": [
       {
@@ -22,6 +22,7 @@
     "sameAs": [
       "https://github.com/bewuwy",
       "https://steamcommunity.com/id/bewuwy",
+      "https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/",
       "https://mine.ly/b3wu.1"
     ]
   }
