--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
 
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:description" content="{{ page.description }}" />
-    <meta property="og:site_name" content="bewu.ga" />
+    <meta property="og:site_name" content="bewu.dev" />
     <meta property="og:url" content="{{ site.url }}" />
-    <meta property="og:image" content="https://bewu.ga/assets/logo/bewu_long.webp" />
+    <meta property="og:image" content="https://bewu.dev/assets/pfp/pfp-neon.webp" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="600" />
     <meta property="og:image:alt" content="bewu" />
@@ -29,13 +29,13 @@
     <script src="/assets/js/jquery-3.6.0.min.js" async></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G383S7G6EJ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKRD4YLEYG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-G383S7G6EJ');
+      gtag('config', 'G-YKRD4YLEYG');
     </script>
 
     {% if page.head_include %}
