--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,26 +84,13 @@
   margin-left: 3%;
   margin-right: 3%;
 }
-nav {
-  padding-top: 2vw;
-  vertical-align: middle;
-  line-height: 3.7vh;
-}
-nav a {
-  margin: 1vw;
-  color: white;
-  font-size: 3.5vh;
-  font-weight: bold;
-  vertical-align: 2%;
-}
-nav a:hover {
-  opacity: 0.7;
-}
+
 body {
   background-color: #131516;
   color: white;
   font-family: 'Poppins';
   margin: 0;
+  padding:0;
 }
 a {
   color: #1a85ff;
