--- a/_includes/script_index.html
+++ b/_includes/script_index.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/assets/css/index.css">
+
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
