--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="sitemap" href="/sitemap.xml" />
 
-    <script src="/assets/js/jquery-3.6.0.min.js" async></script>
+    <script src="/assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKRD4YLEYG"></script>
