new font for nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 
 <nav id="nav">
     <a style="margin: 0;" id="jumpClick"><span>bewu</span></a>
-    <div id="links" style="display: inline;">
+    <div id="links" style="display: inline; font-family: fsm;">
       <a alt="bewu.ga" href="/" rel="prev" style="margin: 0;" id="navTitle">.{{ include.title }}</a>
       <div style="display: none;" id="navLinks">
         {% unless include.title == "start()" %}<a href="/" rel="prev">.start()</a><br>{% endunless %}
