--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
   font-display: swap;
 }
 
+/* 
 @media (max-width:800px) {
   .center {
     margin: 5%;
@@ -105,4 +106,4 @@ footer {
 }
 footer p {
   margin: 0.1rem;
-}
+} */
