added arrow up effect

--- a/_includes/script_index.html
+++ b/_includes/script_index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/index.css">
+<link rel="stylesheet" href="/assets/css/index.css" />
 
 <!-- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script> -->
 <script type="application/ld+json">
@@ -6,15 +6,15 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "bewu",
-    "legalName" : "bewuwy",
+    "legalName": "bewuwy",
     "url": "https://bewu.dev/",
     "@id": "https://bewu.dev/",
     "logo": "https://bewu.ga/assets/pfp/pfp-neon.webp",
     "foundingDate": "2021",
     "founders": [
       {
-       "@type": "Person",
-       "name": "Bartek bewu Włodarczyk"
+        "@type": "Person",
+        "name": "Bartek bewu Włodarczyk"
       }
     ],
     "address": {
@@ -40,8 +40,10 @@
   window.addEventListener("scroll", function () {
     showFunction();
   });
-  
+
   function showFunction() {
+    let root = document.documentElement;
+
     let e1 = document.getElementById("sub1");
     let e2 = document.getElementById("sub2");
     let arrow = document.getElementById("arrow");
@@ -49,47 +51,49 @@
     let img = document.getElementById("img");
     let p = document.getElementById("page1");
     let socials = document.getElementById("socials");
-  
-    const scrollAmount = 70;
-  
+
+    const scrollToTrigger = 120;
+    const scrollAmount = document.body.scrollTop || document.documentElement.scrollTop;
+
+    root.style.setProperty('--el-bottom-margin', scrollAmount * 0.03 + "em");
+
     if (
-      document.body.scrollTop > scrollAmount ||
-      document.documentElement.scrollTop > scrollAmount
+      scrollAmount > scrollToTrigger
     ) {
       // document.getElementById(id1).style.display = "inline";
       title.style.transform = "scale(0.5)";
       img.style.transform = "scale(0.5)";
-  
+
       e2.style.display = "none";
-  
+
       e1.classList.add("show");
       e1.classList.remove("hide-display");
-  
+
       socials.classList.add("show");
       socials.classList.remove("hide");
-  
+
       arrow.style.visibility = "hidden";
-  
+
       p.style.width = "calc(100% - 30rem)";
       p.style.margin = "0 15rem";
     } else {
       title.style.transform = "scale(1)";
       img.style.transform = "scale(1)";
-  
+
       e2.style.display = "inline";
-  
+
       e1.classList.add("hide-display");
       e1.classList.remove("show");
-  
+
       socials.classList.remove("show");
       socials.classList.add("hide");
-  
+
       arrow.style.visibility = "visible";
-  
+
       p.style.width = "calc(100% - 20rem)";
       p.style.margin = "0 10rem";
     }
-  }  
+  }
 </script>
 
 <!-- <style>a { vertical-align: middle; }</style> -->
