--- a/_includes/head_index.html
+++ b/_includes/head_index.html
@@ -1,25 +1,25 @@
-<link rel="stylesheet" href="/assets/css/index.css">
+<link rel="stylesheet" href="/assets/css/index.css" />
 
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script> -->
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "bewu",
-    "legalName" : "bewuwy",
+    "legalName": "bewuwy",
     "url": "https://bewu.dev/",
     "@id": "https://bewu.dev/",
     "logo": "https://bewu.ga/assets/pfp/pfp-neon.webp",
     "foundingDate": "2021",
     "founders": [
       {
-       "@type": "Person",
-       "name": "Bartek bewu Włodarczyk"
+        "@type": "Person",
+        "name": "bewu"
       }
     ],
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "Warszawa",
+      "addressLocality": "Warsaw",
       "addressCountry": "PL"
     },
     "sameAs": [
@@ -30,10 +30,4 @@
     ]
   }
 </script>
-<script>
-  function moveTo(section) {
-      $("html, body").animate({ scrollTop: $(section).offset().top }, 1000);
-  }
-</script>
-
-<style>a { vertical-align: middle; }</style>
+<script defer src="/assets/js/index.js"></script>
