--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,16 @@
   font-display: swap;
 }
 
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* 
 @media (max-width:800px) {
   .center {
     margin: 5%;
@@ -105,4 +115,4 @@ footer {
 }
 footer p {
   margin: 0.1rem;
-}
+} */
