--- a/app/page.scss
+++ b/app/page.scss
@@ -7,158 +7,15 @@ main {
     flex-direction: row;
 }
 
-div {
-    box-sizing: border-box;
-}
-
-.bewu-text {
-    border-bottom: $border;
-    border-right: $border;
-    height: 100vh;
-
-    span {
-        rotate: 180deg;
-        writing-mode: vertical-rl;
-        font-size: 23vh;
-    }
-}
-
-.tile {
-    padding: 10% 2.5vw;
-    justify-content: center;
-
-    background-color: $bg-color;
-
-    transition: background-color 0.5s ease-out;
-}
-
-.me {
-    .tile {
-        padding: 5% 2.5vw;
-        justify-content: space-around;
-    } 
-}
-
-.rhs {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-
-    .hi {
-        width: 100%;
-        text-align: center;
-        border-bottom: $border;
-        font-size: 3vh;
-        padding-top: 1vh;
-        padding-bottom: 1vh;
-    }
-
-    .content {
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-
-        .title {
-            font-size: 8vh;
-        }
-
-        .subtitle {
-            font-size: 4vh;
-        }
-
-        .annotation {
-            font-size: 2vh;
-        }
-
-        .half {
-            display: flex;
-            flex-direction: column;
-            width: 50%;
-            gap: 3vh;
-        }
-
-        .projects {
-            border-right: $border;
-            border-bottom: $border;
-
-            background-color: $primary-color;
-        }
-
-        .me {
-            height: 100%;
-            gap: 0;
-            border-bottom: $border;
-
-            div {
-                width: 100%;
-            }
-
-            .about {
-
-                display: flex;
-                flex-direction: column;
-
-                height: 35%;
-                border-bottom: $border;
-
-                background-color: $contrast-color;
-
-                .buttons {
-                    display: flex;
-                    gap: 2vw;
-                    flex-direction: row;
-                    align-items: center;
-
-                    .or {
-                        font-size: 1.3em;
-
-                        $margin: 1vw;
-
-                        &::before {
-                            content: "-";
-                            margin-right: $margin;
-                        }
-                        &::after {
-                            content: "-";
-                            margin-left: $margin;
-                        }
-
-                    }
-                }
-            }
-
-            .literally-me {
-                display: flex;
-                flex-direction: column;
-                gap: 3vh;
-                flex-grow: 1;
-
-                background-color: $secondary-color;
-
-                .image-container {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: flex-end;
-                    height: 100%;
-
-                    .image-wrapper {
-                        position: relative;
-                        // width: 40vw;
-                        // max-height: 30vh;
-                        // max-width: 30vh;
-                        aspect-ratio: 1/1;
-                        height: 100%;
-                        width: auto;
-                    }
-
-                    span {
-                        text-align: right;
-                        width: 10vw;
-                        // padding-left: 10vw;
-                    }
-                }
-            }
-        }
-    }
+button, a[role="button"] {
+    background-color: $primary-color;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    transition: all 0.3s;
+    @apply drop-shadow-lg;
 }
