--- a/app/style.scss
+++ b/app/style.scss
@@ -1,69 +1,16 @@
-$primary-color: #9BCDD2;
-$secondary-color: #FAF0E4;
-$contrast-color: #FF8551;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-$bg-color: white;
+$bg-color: #F7EDE2;
+$primary-color: #F6BD60;
+$contrast-color: #84A59D;
+
+.bg-contrast {
+    background-color: $contrast-color;
+}
 
 body {
     background-color: $bg-color;
     margin: 0;
-}
-
-button, a[role="button"] {
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 1.2em;
-    padding: 0.6em 1.6em;
-    width: fit-content;
-    position: relative;
-
-    background: transparent;
-
-    * {
-        transition: transform 0.2s ease-in-out;
-    }
-
-    $move: 6px;
-
-    &:hover > :nth-child(1) {
-        transform: translate(-$move, $move);
-    }
-
-    &:hover > :nth-child(3) {
-        transform: translate($move, -$move);
-    }
-
-    &:hover > span {
-        transform: translate($move, -$move);
-    }
-
-    .bg {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 1;
-        border: 2px solid black;
-        border-radius: 5px;
-    }
-
-    .black {
-        background-color: black;
-    }
-
-    .primary {
-        background-color: $primary-color;
-    }
-
-    .contrast {
-        background-color: $contrast-color;
-    }
-
-    span {
-        position: relative;
-        display: inline-block;
-        z-index: 2;
-    }
 }
