--- a/app/page.scss
+++ b/app/page.scss
@@ -7,15 +7,18 @@ main {
     flex-direction: row;
 }
 
-button, a[role="button"] {
-    background-color: $primary-color;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    font-weight: 600;
-    transition: all 0.3s;
-    @apply drop-shadow-lg;
+svg {
+    font-size: 140px;
+    font-weight: bold;
+    width: 450px;
+    height: 70px;
+    fill: white;
+}
+
+.svgText {
+    fill: black;
+    stroke: white;
+    stroke-width: 15px;
+    stroke-linejoin: round;
+    paint-order: stroke;
 }
