--- a/app/style.scss
+++ b/app/style.scss
@@ -14,3 +14,20 @@ body {
     background-color: $bg-color;
     margin: 0;
 }
+
+button, a[role="button"] {
+    background-color: $primary-color;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    transition: all 0.3s;
+    @apply drop-shadow-lg hover:drop-shadow-2xl;
+}
+
+a:not([role='button']) {
+    @apply hover:underline;
+}
